agregar varias localizaciones a una sucursal, en crear, perfil admin

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -4307,3 +4307,14 @@ ul.notifications {
 .search-cancel {
   display: none;
 }
+#locations_table {
+  display: none;
+}
+.form-control-table {
+  border-radius: 0;
+  width: 100%;
+}
+.form-control-table:focus {
+  border-color: #CCD0D7;
+  box-shadow: none !important; 
+}
