--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -349,13 +349,12 @@ body {
   padding: 10px 0; }
 
 .page-title .title_left {
-  width: 45%;
   float: left;
-  display: block; }
-
+  display: block; 
+}
 .page-title .title_left h3 {
-  margin: 9px 0; }
-
+  margin: 9px 0; 
+}
 .page-title .title_right {
   width: 55%;
   float: left;
@@ -602,7 +601,7 @@ a:hover, a:focus {
 .top_search .form-control {
   border-right: 0;
   box-shadow: inset 0 1px 0px rgba(0, 0, 0, 0.075);
-  border-radius: 25px 0px 0px 25px;
+  border-radius: 3px 0px 0px 3px;
   padding-left: 20px;
   border: 1px solid rgba(221, 226, 232, 0.49); }
 
@@ -611,11 +610,11 @@ a:hover, a:focus {
   border-right: 0; }
 
 .top_search .input-group-btn button {
-  border-radius: 0px 25px 25px 0px;
+  border-radius: 0px 3px 3px 0px;
   border: 1px solid rgba(221, 226, 232, 0.49);
   border-left: 0;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  color: #93A2B2;
+  color: #fff;
   margin-bottom: 0 !important; }
 
 .toggle {
@@ -2112,7 +2111,8 @@ input.parsley-error, textarea.parsley-error, select.parsley-error {
 /* ***** /autocomplete *****/
 /* ***** buttons ********/
 .btn {
-  border-radius: 3px; }
+  border-radius: 3px; 
+}
 
 a.btn-success, a.btn-primary, a.btn-warning, a.btn-danger {
   color: #fff; }
@@ -4328,4 +4328,7 @@ ul.notifications {
   width:80% !important; 
   margin-left:auto; 
   margin-right:auto;
+}
+.datetime {
+  cursor: pointer;
 }
