--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -19,6 +19,51 @@ body {
 .left_col {
   background: #2A3F54; }
 
+.left_col .mCSB_scrollTools {
+  width: 6px; }
+
+.left_col .mCSB_dragger {
+  max-height: 400px !important; }
+
+ .top_nav .dropdown-menu li {
+  width: 100%; }
+
+.top_nav .dropdown-menu li a {
+  width: 100%;
+  padding: 12px 20px; }
+
+.top_nav li a i {
+  font-size: 15px; }
+
+.navbar-static-top {
+  position: fixed;
+  top: 0;
+  width: 100%; }
+
+.sidebar-header {
+  border-bottom: 0;
+  margin-top: 46px; }
+
+.sidebar-header:first-of-type {
+  margin-top: 0; }
+
+.nav.side-menu > li {
+  position: relative;
+  display: block;
+  cursor: pointer; }
+
+.nav.side-menu > li > a {
+  margin-bottom: 6px; }
+
+.nav-sm footer {
+  margin-left: 70px; }
+
+.footer_fixed footer {
+  position: fixed;
+  left: 0px;
+  bottom: 0px;
+  width: 100%; }
+
 .nav-sm .container.body .col-md-3.left_col {
   width: 70px;
   padding: 0;
@@ -200,12 +245,6 @@ body {
   width: 100%;
   position: relative; }
 
-@media (min-width: 480px) {
-  #map-form {
-  height:250px !important;
-  }
-  .nav_menu {
-    position: static; } }
 .nav-md .container.body .col-md-3.left_col {
   width: 230px;
   padding: 0;
@@ -231,37 +270,6 @@ body .container.body .right_col {
   background: #2A3F54;
   border-radius: 0;
   height: 57px; }
-
-@media (max-width: 991px) {
-  .nav-md .container.body .right_col, .nav-md .container.body .top_nav {
-    width: 100%;
-    margin: 0; }
-
-  .nav-md .container.body .col-md-3.left_col {
-    display: none; }
-
-  .nav-md .container.body .right_col {
-    width: 100%;
-    padding-right: 0; }
-
-  .right_col {
-    padding: 10px !important; } }
-@media (max-width: 1200px) {
-  .x_title h2 {
-    width: 62%;
-    font-size: 17px; }
-
-  .tile, .graph {
-    zoom: 85%;
-    height: inherit; } }
-@media (max-width: 1270px) and (min-width: 192px) {
-  .x_title h2 small {
-    display: none; } }
-.left_col .mCSB_scrollTools {
-  width: 6px; }
-
-.left_col .mCSB_dragger {
-  max-height: 400px !important; }
 
 /**  ------------------------------------------  **/
 .blue {
@@ -400,19 +408,6 @@ table.no-margin .progress {
   width: 50%;
   margin-bottom: 10px; }
 
-@media (min-width: 768px) {
-  .col-md-55 {
-    width: 20%; } }
-@media (min-width: 992px) {
-  .col-md-55 {
-    width: 20%; } }
-@media (min-width: 1200px) {
-  .col-md-55 {
-    width: 20%; } }
-@media (min-width: 192px) and (max-width: 1270px) {
-  table.tile_info span.right {
-    margin-right: 7px;
-    float: left; } }
 .center-margin {
   margin: 0 auto;
   float: none !important; }
@@ -463,39 +458,6 @@ a:hover, a:focus {
   display: inline-block;
   float: right;
   position: static; }
-
-@media (min-width: 480px) {
-  .top_nav .navbar-right li {
-    position: relative; } }
-.top_nav .dropdown-menu li {
-  width: 100%; }
-
-.top_nav .dropdown-menu li a {
-  width: 100%;
-  padding: 12px 20px; }
-
-.top_nav li a i {
-  font-size: 15px; }
-
-.navbar-static-top {
-  position: fixed;
-  top: 0;
-  width: 100%; }
-
-.sidebar-header {
-  border-bottom: 0;
-  margin-top: 46px; }
-
-.sidebar-header:first-of-type {
-  margin-top: 0; }
-
-.nav.side-menu > li {
-  position: relative;
-  display: block;
-  cursor: pointer; }
-
-.nav.side-menu > li > a {
-  margin-bottom: 6px; }
 
 .nav.side-menu > li > a:hover {
   color: #F2F5F7 !important; }
@@ -676,24 +638,6 @@ footer {
   padding: 15px 20px;
   display: block; }
 
-@media (min-width: 768px) {
-  footer {
-    margin-left: 230px; } }
-.nav-sm footer {
-  margin-left: 70px; }
-
-.footer_fixed footer {
-  position: fixed;
-  left: 0px;
-  bottom: 0px;
-  width: 100%; }
-
-@media (min-width: 768px) {
-  .footer_fixed footer {
-    margin-left: 0; } }
-@media (min-width: 768px) {
-  .footer_fixed .nav-sm footer {
-    margin-left: 0; } }
 .tile-stats.sparkline {
   padding: 10px;
   text-align: center; }
@@ -1500,11 +1444,6 @@ span.right {
   white-space: nowrap;
   position: relative; }
 
-@media (min-width: 992px) {
-  .tile_count .tile_stats_count {
-    margin-bottom: 10px;
-    border-bottom: 0;
-    padding-bottom: 10px; } }
 .tile_count .tile_stats_count:before {
   content: "";
   position: absolute;
@@ -1513,26 +1452,14 @@ span.right {
   border-left: 2px solid #ADB2B5;
   margin-top: 10px; }
 
-@media (min-width: 992px) {
-  .tile_count .tile_stats_count:first-child:before {
-    border-left: 0; } }
 .tile_count .tile_stats_count .count {
   font-size: 30px;
   line-height: 47px;
   font-weight: 600; }
 
-@media (min-width: 768px) {
-  .tile_count .tile_stats_count .count {
-    font-size: 40px; } }
-@media (min-width: 992px) and (max-width: 1100px) {
-  .tile_count .tile_stats_count .count {
-    font-size: 30px; } }
 .tile_count .tile_stats_count span {
   font-size: 12px; }
 
-@media (min-width: 768px) {
-  .tile_count .tile_stats_count span {
-    font-size: 13px; } }
 .tile_count .tile_stats_count .count_bottom i {
   width: 12px; }
 
@@ -1845,10 +1772,6 @@ a.star {
   font-size: 8px;
   background: #BAB7B7; }
 
-@media (max-width: 767px) {
-  .mail_list {
-    margin-bottom: 5px;
-    display: inline-block; } }
 .mail_heading h4 {
   font-size: 18px;
   border-bottom: 1px solid #ddd;
@@ -2250,14 +2173,6 @@ textarea:focus {
   color: #fff;
   background-color: #1ABB9C; }
 
-@media (min-width: 768px) {
-  .bs-glyphicons {
-    margin-right: 0;
-    margin-left: 0; }
-
-  .bs-glyphicons li {
-    width: 12.5%;
-    font-size: 12px; } }
 /* *********  /glyphicons  **************************** */
 /* *********  form tags input  **************************** */
 .tagsinput {
@@ -3153,9 +3068,6 @@ ul.project_files li a i {
   height: 50px;
   width: 50px; }
 
-@media (min-width: 992px) {
-  .avatar-preview {
-    float: none; } }
 .avatar-btns {
   margin-top: 30px;
   margin-bottom: 15px; }
@@ -3262,8 +3174,16 @@ ul.project_files li a i {
 /* *********  /ecommerce  **************************** */
 /** login **/
 .login {
-  background: #F7F7F7; }
-
+  background: rgba(255,255,255,1);
+  background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 13%, rgba(237,237,237,1) 49%, rgba(65,97,129,1) 86%, rgba(65,97,129,1) 95%, rgba(89,232,204,1) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(13%, rgba(255,255,255,1)), color-stop(49%, rgba(237,237,237,1)), color-stop(86%, rgba(65,97,129,1)), color-stop(95%, rgba(65,97,129,1)), color-stop(100%, rgba(89,232,204,1)));
+  background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 13%, rgba(237,237,237,1) 49%, rgba(65,97,129,1) 86%, rgba(65,97,129,1) 95%, rgba(89,232,204,1) 100%);
+  background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 13%, rgba(237,237,237,1) 49%, rgba(65,97,129,1) 86%, rgba(65,97,129,1) 95%, rgba(89,232,204,1) 100%);
+  background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 13%, rgba(237,237,237,1) 49%, rgba(65,97,129,1) 86%, rgba(65,97,129,1) 95%, rgba(89,232,204,1) 100%);
+  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 13%, rgba(237,237,237,1) 49%, rgba(65,97,129,1) 86%, rgba(65,97,129,1) 95%, rgba(89,232,204,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#59e8cc', GradientType=0 );
+  background-attachment: fixed;
+}
 .login .fa-paw {
   font-size: 26px; }
 
@@ -3355,44 +3275,10 @@ a.hiddenanchor {
   text-decoration: underline; }
 
 .login_content h1 {
-  font: normal 24px Helvetica, Arial, sans-serif;
+  font-size: 30px;
   letter-spacing: -0.05em;
   line-height: 20px;
   margin: 10px 0 30px; }
-
-.login_content h1:before, .login_content h1:after {
-  content: "";
-  height: 1px;
-  position: absolute;
-  top: 10px;
-  width: 12%; }
-
-.login_content h1:after {
-  background: #7e7e7e;
-  background: linear-gradient(left, #7e7e7e 0%, white 100%);
-  right: 0; }
-
-.login_content h1:before {
-  background: #7e7e7e;
-  background: linear-gradient(right, #7e7e7e 0%, white 100%);
-  left: 0; }
-
-.login_content h1:before, .login_content h1:after {
-  content: "";
-  height: 1px;
-  position: absolute;
-  top: 10px;
-  width: 12%; }
-
-.login_content h1:after {
-  background: #7e7e7e;
-  background: linear-gradient(left, #7e7e7e 0%, white 100%);
-  right: 0; }
-
-.login_content h1:before {
-  background: #7e7e7e;
-  background: linear-gradient(right, #7e7e7e 0%, white 100%);
-  left: 0; }
 
 .login_content form {
   margin: 20px 0;
@@ -3621,9 +3507,6 @@ fieldset {
   max-height: 516px;
   margin-bottom: 20px; }
 
-@media (min-width: 768px) {
-  .cropper .img-container {
-    min-height: 516px; } }
 .cropper .img-container > img {
   max-width: 100%; }
 
@@ -3699,22 +3582,6 @@ fieldset {
   margin: -6px;
   padding: 6px; }
 
-@media (max-width: 414px) {
-  #map-form {
-    height:250px !important;
-  }
-  .cropper .btn-group-crop {
-    margin-right: -15px !important; }
-
-  .cropper .btn-group-crop > .btn {
-    padding-left: 5px;
-    padding-right: 5px; }
-
-  .cropper .btn-group-crop .docs-tooltip {
-    margin-left: -5px;
-    margin-right: -5px;
-    padding-left: 5px;
-    padding-right: 5px; } }
 .cropper .docs-options .dropdown-menu {
   width: 100%; }
 
