--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -3177,18 +3177,13 @@ ul.project_files li a i {
   z-index: -10;
   background-repeat: repeat-x;
   background: rgba(255,255,255,1);
-  background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 13%, rgba(237,237,237,1) 49%, rgba(65,97,129,1) 86%, rgba(65,97,129,1) 95%, rgba(89,232,204,1) 100%);
-  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(13%, rgba(255,255,255,1)), color-stop(49%, rgba(237,237,237,1)), color-stop(86%, rgba(65,97,129,1)), color-stop(95%, rgba(65,97,129,1)), color-stop(100%, rgba(89,232,204,1)));
-  background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 13%, rgba(237,237,237,1) 49%, rgba(65,97,129,1) 86%, rgba(65,97,129,1) 95%, rgba(89,232,204,1) 100%);
-  background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 13%, rgba(237,237,237,1) 49%, rgba(65,97,129,1) 86%, rgba(65,97,129,1) 95%, rgba(89,232,204,1) 100%);
-  background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 13%, rgba(237,237,237,1) 49%, rgba(65,97,129,1) 86%, rgba(65,97,129,1) 95%, rgba(89,232,204,1) 100%);
-  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 13%, rgba(237,237,237,1) 49%, rgba(65,97,129,1) 86%, rgba(65,97,129,1) 95%, rgba(89,232,204,1) 100%);
+  background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 13%, rgba(237,237,237,1) 49%, rgba(65,97,129,1) 86%, rgba(65,97,129,1) 95%, rgba(89,232,204,1) 100%) no-repeat center center fixed;
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(13%, rgba(255,255,255,1)), color-stop(49%, rgba(237,237,237,1)), color-stop(86%, rgba(65,97,129,1)), color-stop(95%, rgba(65,97,129,1)), color-stop(100%, rgba(89,232,204,1))) no-repeat center center fixed;
+  background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 13%, rgba(237,237,237,1) 49%, rgba(65,97,129,1) 86%, rgba(65,97,129,1) 95%, rgba(89,232,204,1) 100%) no-repeat center center fixed;
+  background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 13%, rgba(237,237,237,1) 49%, rgba(65,97,129,1) 86%, rgba(65,97,129,1) 95%, rgba(89,232,204,1) 100%) no-repeat center center fixed;
+  background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 13%, rgba(237,237,237,1) 49%, rgba(65,97,129,1) 86%, rgba(65,97,129,1) 95%, rgba(89,232,204,1) 100%) no-repeat center center fixed;
+  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 13%, rgba(237,237,237,1) 49%, rgba(65,97,129,1) 86%, rgba(65,97,129,1) 95%, rgba(89,232,204,1) 100%) no-repeat center center fixed;
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#59e8cc', GradientType=0 );
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-attachment: fixed;
 }
 .no-touch .login {
    background-attachment:fixed;
