--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1,16 +1,19 @@
 @charset "UTF-8";
 
-@font-face
-{
-  font-family: "Raleway";
-  src: url('fonts/raleway-webfont.woff2') format('woff2');
-  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+@font-face {
+  font-family: "Avenir";
+  src: url("fonts/Avenir/e346b9e5ac72878697ddacbb114dc3d0.eot"); /* IE9*/
+  src: url("fonts/Avenir/e346b9e5ac72878697ddacbb114dc3d0.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+  url("fonts/Avenir/e346b9e5ac72878697ddacbb114dc3d0.woff2") format("woff2"), /* chrome、firefox */
+  url("fonts/Avenir/e346b9e5ac72878697ddacbb114dc3d0.woff") format("woff"), /* chrome、firefox */
+  url("fonts/Avenir/e346b9e5ac72878697ddacbb114dc3d0.ttf") format("truetype"), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+  url("fonts/Avenir/e346b9e5ac72878697ddacbb114dc3d0.svg#Avenir LT W01 35 Light") format("svg"); /* iOS 4.1- */
 }
 
 body {
   color: #000 !important;
   background: #2A3F54;
-  font-family: "Raleway", sans-serif;
+  font-family: "Avenir", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 1.471; 
@@ -2194,7 +2197,7 @@ span.tag {
   margin-right: 5px;
   font-weight: 500;
   margin-bottom: 5px;
-  font-family: 'Raleway', helvetica; }
+  font-family: 'Avenir', helvetica; }
 
 span.tag a {
   color: #F1F6F7 !important; }
@@ -2208,7 +2211,7 @@ span.tag a {
 .tagsinput input {
   width: 80px;
   margin: 0px;
-  font-family: 'Raleway', helvetica;
+  font-family: 'Avenir', helvetica;
   font-size: 13px;
   border: 1px solid transparent;
   padding: 3px;
@@ -2863,7 +2866,7 @@ ul.project_files li a i {
   padding: 0 4px; }
 
 .view p {
-  font-family: 'Raleway', serif;
+  font-family: 'Avenir', serif;
   font-style: italic;
   font-size: 12px;
   position: relative;
@@ -3098,7 +3101,7 @@ ul.project_files li a i {
   color: #666;
   background: rgba(243, 242, 243, 0.8);
   border: solid 2px rgba(195, 194, 196, 0.8);
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Avenir', sans-serif;
   font-size: 12px;
   text-align: center; }
 
