--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -278,6 +278,9 @@ body .container.body .right_col {
 .blue {
   color: #3498DB; }
 
+.turqueza {
+  color: #1ABB9C; }
+
 .purple {
   color: #9B59B6; }
 
@@ -778,6 +781,11 @@ h2 {
 .x_title {
   border-bottom: 2px solid #E6E9ED;
   padding: 1px 5px 6px;
+  margin-bottom: 10px; }
+
+.t_title {
+  border-bottom: 1px solid #1ABB9C;
+  padding: 1px 5px 2px;
   margin-bottom: 10px; }
 
 .x_title .filter {
@@ -1897,26 +1905,50 @@ legend {
   color: inherit; }
 
 .form-horizontal .form-group {
-  margin-right: 0;
-  margin-left: 0; }
+  padding-left: 30px;
+}
+
+.form-horizontal input[type="text"],.panel-login input[type="email"],.panel-login input[type="password"] {
+  height: 45px;
+  border: 0;
+  font-size: 16px;
+  -webkit-transition: all 0.1s linear;
+  -moz-transition: all 0.1s linear;
+  transition: all 0.1s linear;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border-bottom: 1px solid #e7e7e7;
+  border-radius: 0px;
+  padding-top: 6px;
+  width: 100%;
+}
+
+.form-control input:hover,
+.form-control input:focus {
+  outline:none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  border-color: #ccc;
+}
 
 .form-control-feedback {
   margin-top: 8px;
-  height: 23px;
-  color: #bbb;
+  height: 30px;
+  color: #1ABB9C;
   line-height: 24px;
   font-size: 15px; }
 
 .form-control-feedback.left {
-  border-right: 1px solid #ccc;
-  left: 13px; }
+  border-right: 1px solid #1ABB9C;
+  left: 25px; }
 
 .form-control-feedback.right {
   border-left: 1px solid #ccc;
   right: 13px; }
 
 .form-control.has-feedback-left {
-  padding-left: 45px; }
+  padding-left: 35px; }
 
 .form-control.has-feedback-right {
   padding-right: 45px; }
@@ -3175,185 +3207,7 @@ ul.project_files li a i {
   font-size: 35px; }
 
 /* *********  /ecommerce  **************************** */
-/** login **/
-.login {
-  background: #F1FAF8;
-}
-.no-touch .login {
-   background-attachment:fixed;
-}
-.login .fa-paw {
-  font-size: 26px; }
 
-a.hiddenanchor {
-  display: none; }
-
-.login_wrapper {
-  right: 0px;
-  margin: 0px auto;
-  margin-top: 5%;
-  max-width: 350px;
-  position: relative; }
-
-.registration_form, .login_form {
-  position: absolute;
-  top: 0px;
-  width: 100%; }
-
-.registration_form {
-  z-index: 21;
-  opacity: 0;
-  width: 100%; }
-
-.login_form {
-  z-index: 22; }
-
-#signup:target ~ .login_wrapper .registration_form, #signin:target ~ .login_wrapper .login_form {
-  z-index: 22;
-  animation-name: fadeInLeft;
-  animation-delay: .1s; }
-
-#signup:target ~ .login_wrapper .login_form, #signin:target ~ .login_wrapper .registration_form {
-  animation-name: fadeOutLeft; }
-
-.animate {
-  -webkit-animation-duration: 0.5s;
-  -webkit-animation-timing-function: ease;
-  -webkit-animation-fill-mode: both;
-  -moz-animation-duration: 0.5s;
-  -moz-animation-timing-function: ease;
-  -moz-animation-fill-mode: both;
-  -o-animation-duration: 0.5s;
-  -o-animation-timing-function: ease;
-  -o-animation-fill-mode: both;
-  -ms-animation-duration: 0.5s;
-  -ms-animation-timing-function: ease;
-  -ms-animation-fill-mode: both;
-  animation-duration: 0.5s;
-  animation-timing-function: ease;
-  animation-fill-mode: both; }
-
-/** /login **/
-/** signup **/
-.login_box {
-  padding: 20px;
-  margin: auto; }
-
-.left {
-  float: left; }
-
-.alignleft {
-  float: left;
-  margin-right: 15px; }
-
-.alignright {
-  float: right;
-  margin-left: 15px; }
-
-.clearfix:after, form:after {
-  content: ".";
-  display: block;
-  height: 0;
-  clear: both;
-  visibility: hidden; }
-
-.login_content {
-  margin: 0 auto;
-  padding: 25px 0 0;
-  position: relative;
-  text-align: center;
-  text-shadow: 0 1px 0 #fff;
-  min-width: 280px; }
-
-.login_content a,
-.login_content .btn-default:hover {
-  text-decoration: none; }
-
-.login_content a:hover {
-  text-decoration: underline; }
-
-.login_content h1 {
-  font-size: 30px;
-  letter-spacing: -0.05em;
-  line-height: 20px;
-  margin: 10px 0 30px; }
-
-.login_content form {
-  margin: 20px 0;
-  position: relative; }
-
-.login_content form input[type="text"], .login_content form input[type="email"], .login_content form input[type="password"] {
-  border-radius: 3px;
-  -ms-box-shadow: 0 1px 0 #fff, 0 -2px 5px rgba(0, 0, 0, 0.08) inset;
-  -o-box-shadow: 0 1px 0 #fff, 0 -2px 5px rgba(0, 0, 0, 0.08) inset;
-  box-shadow: 0 1px 0 #fff, 0 -2px 5px rgba(0, 0, 0, 0.08) inset;
-  border: 1px solid #c8c8c8;
-  color: #777;
-  margin: 0 0 20px;
-  width: 100%; }
-
-.login_content form input[type="text"]:focus, .login_content form input[type="email"]:focus, .login_content form input[type="password"]:focus {
-  -ms-box-shadow: 0 0 2px #ed1c24 inset;
-  -o-box-shadow: 0 0 2px #ed1c24 inset;
-  box-shadow: 0 0 2px #A97AAD inset;
-  background-color: #fff;
-  border: 1px solid #A878AF;
-  outline: none; }
-
-#username {
-  background-position: 10px 10px !important; }
-
-#password {
-  background-position: 10px -53px !important; }
-
-.login_content form div a {
-  font-size: 15px;
-  margin: 10px 15px 0 0; }
-
-.reset_pass {
-  margin-top: 10px !important; }
-
-.login_content div .reset_pass {
-  margin-top: 13px !important;
-  margin-right: 39px;
-  float: right; }
-
-.separator {
-  border-top: 1px solid #D8D8D8;
-  margin-top: 10px;
-  padding-top: 10px; }
-
-.button {
-  background: #f7f9fa;
-  background: linear-gradient(top, #f7f9fa 0%, #f0f0f0 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f9fa', endColorstr='#f0f0f0', GradientType=0);
-  -ms-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1) inset;
-  -o-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1) inset;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1) inset;
-  border-radius: 0 0 5px 5px;
-  border-top: 1px solid #CFD5D9;
-  padding: 15px 0; }
-
-.login_content form input[type="submit"], #content form .submit {
-  float: left;
-  margin-left: 38px; }
-
-.button a {
-  background: url(http://cssdeck.com/uploads/media/items/8/8bcLQqF.png) 0 -112px no-repeat;
-  color: #7E7E7E;
-  font-size: 17px;
-  padding: 2px 0 2px 40px;
-  text-decoration: none;
-  transition: all 0.3s ease; }
-
-.button a:hover {
-  background-position: 0 -135px;
-  color: #00aeef; }
-
-header {
-  width: 100%; }
-
-/** signup **/
 /* *********  start nprogress  **************************** */
 /* Make clicks pass-through */
 #nprogress {
@@ -4200,10 +4054,13 @@ ul.notifications {
   box-shadow: none !important; 
 }
 #map-form {
-  width:80% !important; 
+  width:100% !important; 
   margin-left:auto; 
   margin-right:auto;
 }
 .datetime {
   cursor: pointer;
+}
+.modal {
+   border-radius: 0px !important;
 }
