mostrar total, sumar total de paquetes, cambiar el precio de cuardo al tiempo de entrega

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -4091,3 +4091,14 @@ ul.notifications {
 .hide {
   display: none;
 }
+.show {
+  display: block;
+}
+.not_clic {
+  pointer-events: none;
+  cursor: default;
+}
+.add-cart img {
+  width: 100%; 
+  display: block;
+}
