--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -4106,3 +4106,105 @@ ul.notifications {
   width: 100%; 
   display: block;
 }
+
+/***** loading *******/
+.loader {
+    color: #fff;
+    position: fixed;
+    box-sizing: border-box;
+    left: -9999px;
+    top: -9999px;
+    width: 0;
+    height: 0;
+    overflow: hidden;
+    z-index: 999999
+}
+
+.loader:after,
+.loader:before {
+    box-sizing: border-box
+}
+
+.loader.is-active {
+    background-color: rgba(0, 0, 0, 0.45);
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0
+}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0) scale(1);
+        border-radius: 0;
+        background: #f3d53f
+    }
+    25%,
+    75% {
+        transform: rotate(180deg) scale(.4);
+        border-radius: 50%;
+        background: #0fd6ff
+    }
+    100% {
+        transform: rotate(360deg) scale(1);
+        border-radius: 0;
+        background: #f3d53f
+    }
+}
+
+@keyframes blink {
+    from {
+        opacity: .5
+    }
+    to {
+        opacity: 1
+    }
+}
+
+.loader[data-text]:before {
+    position: fixed;
+    left: 0;
+    top: 50%;
+    color: currentColor;
+    font-family: "Avenir", sans-serif;
+    text-align: center;
+    width: 100%;
+    font-size: 14px
+}
+
+.loader[data-text='']:before {
+    content: 'Loading'
+}
+
+.loader[data-text]:not([data-text='']):before {
+    content: attr(data-text)
+}
+
+.loader[data-text][data-blink]:before {
+    animation: blink 1s linear infinite alternate
+}
+
+.loader-default[data-text]:before {
+    top: calc(50% - 63px)
+}
+
+.loader-default:after {
+    content: '';
+    position: fixed;
+    width: 48px;
+    height: 48px;
+    top: calc(50% - 24px);
+    left: calc(50% - 24px);
+    display: inline-block;
+    box-sizing: border-box;
+    background: #0fd6ff;
+    animation: rotation 1s linear infinite
+}
+
+.loader-default[data-half]:after {
+    border-right-color: transparent
+}
+
+.loader-default[data-inverse]:after {
+    animation-direction: reverse
+}
