--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -4231,3 +4231,9 @@ ul.notifications {
   background-size: 200px 50px;
   background-repeat: no-repeat;
   height: 50px; width: 200px; }
+
+@media print {
+.no-print {
+    display:none;
+  }
+}
