registro de clientes

--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -16,6 +16,9 @@ body {
   color:#666666;
   font-family: 'Avenir', sans-serif;
   font-weight:100;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 body{
