--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -17,6 +17,9 @@ body {
   font-size: 14px;
   font-weight: 400;
   line-height: 1.471; 
+  overflow-x: hidden;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .left_col {
