--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -4126,7 +4126,8 @@ ul.notifications {
     width: 0;
     height: 0;
     overflow: hidden;
-    z-index: 999999
+    z-index: 999999;
+    display: none;
 }
 
 .loader:after,
@@ -4139,7 +4140,8 @@ ul.notifications {
     width: 100%;
     height: 100%;
     left: 0;
-    top: 0
+    top: 0;
+    display: block;
 }
 
 @keyframes rotation {
