--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -64,7 +64,8 @@ body{
     width: 0;
     height: 0;
     overflow: hidden;
-    z-index: 999999
+    z-index: 999999;
+    display: none;
 }
 
 .loader:after,
@@ -77,7 +78,8 @@ body{
     width: 100%;
     height: 100%;
     left: 0;
-    top: 0
+    top: 0;
+    display: block;
 }
 
 @keyframes rotation {
