--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -3072,7 +3072,8 @@ ul.project_files li a i {
   overflow: hidden;
   max-width: 200px; 
   max-height: 200px;
-  text-align: center; }
+  text-align: center;     
+  margin: 0 auto;}
 
 img.avatar-view-img {
   width: 100%;
