agregar y editar servicios a una sucursal

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -4087,6 +4087,9 @@ ul.notifications {
 #packages_table {
   display: none;
 }
+#services_table {
+  display: none;
+}
 .form-control-table {
   border-radius: 0;
   width: 100%;
